# cadence

./: .gitignore  .nvim.lua  AndroidManifest.xml  Cargo.toml  README.md  build.rs  justfile  package-lock.json  package.json
.junie/: guidelines.md
.zed/: debug.json  settings.json
android/: KeepAliveService.kt  MainActivity.kt  ShazamAudioRecorder.kt  WryActivity.kt
android/sources/: KeepAliveService.kt  MediaCallback.kt  ShazamBridge.kt
assets/: howler-import.js
crates/app/: Cargo.toml  Dioxus.toml
crates/app/assets/: dx-components-theme.css  main.css  main.scss
crates/app/assets/js/: getDominantColor.js
crates/app/assets/styles/: main.scss
crates/app/src/: context.rs  main.rs
crates/app/src/components/: mod.rs
crates/app/src/components/album_action_bar/: album-action-bar.scss  mod.rs
crates/app/src/components/album_card/: mod.rs  style.css
crates/app/src/components/album_list/: album_list.scss  mod.rs  style.css
crates/app/src/components/icons/: animated_bars.rs  dots.rs  gear.rs  icons.scss  mod.rs
crates/app/src/components/login/: mod.rs
crates/app/src/components/navbar/: mod.rs  navbar.scss  style.css
crates/app/src/components/player/: mod.rs  player.scss
crates/app/src/components/progress/: mod.rs  progress.scss
crates/app/src/components/search/: mod.rs
crates/app/src/components/topbar/: mod.rs  style.css
crates/app/src/components/track/: mod.rs  style.css  track.scss
crates/app/src/navigation/navbar/: mod.rs  navbar.scss
crates/app/src/navigation/topbar/: mod.rs  topbar.scss
crates/app/src/services/: subsonic_client.rs
crates/app/src/shared/: thumbnails.rs
crates/app/src/views/: mod.rs
crates/app/src/views/album/: album-view.scss  mod.rs
crates/app/src/views/home/: home-view.scss  mod.rs
crates/app/src/views/search/: mod.rs  search-view.scss  style.css  style.scss
crates/cadence-core/: Cargo.toml
crates/cadence-core/src/: hooks.rs  lib.rs  model.rs  player.rs  services.rs  state.rs
crates/cadence-core/src/hooks/: context.rs  effects.rs  mod.rs
crates/cadence-core/src/model/: album.rs  artist.rs  mod.rs  playlist.rs  radio.rs  search.rs  shazam.rs  song.rs  starred.rs
crates/cadence-core/src/player/: mod.rs
crates/cadence-core/src/player/backend/: mod.rs  rodio.rs  wasm.rs
crates/cadence-core/src/player/notification/: android.rs  mod.rs  mpris.rs
crates/cadence-core/src/services/: genius_client.rs  lidarr_client.rs  mod.rs  shazam_bridge.rs  shazam_client.rs  subsonic_client.rs  ticketmaster_client.rs
crates/cadence-core/src/state/: controller.rs  lidarr.rs  login.rs  mod.rs  player.rs  queue.rs  subsonic.rs  ticketmaster.rs
crates/cadence-player/: Cargo.toml
crates/cadence-player/src/: android_backend.rs  lib.rs  wasm.rs
crates/cadence-player/src/backend/: mod.rs  rodio.rs
crates/cadence-player/src/notification/: android.rs  mod.rs  mrpis.rs
crates/cadence-storage-android/: Cargo.toml
crates/cadence-storage-android/src/: lib.rs
crates/cadence-ui/: Cargo.toml
crates/cadence-ui/assets/: items.scss  mixins.scss  theme.scss  ui.scss
crates/cadence-ui/src/: lib.rs  track.rs  views.rs
crates/cadence-ui/src/album/: action-bar.scss  action_bar.rs  album-action-bar.scss  album-card.scss  album-list.scss  album.scss  card.rs  card.scss  cover.rs  cover.scss  list.rs  list.scss  mod.rs  modal.rs  modal.scss  title.rs  title.scss
crates/cadence-ui/src/button/: button.scss  mod.rs
crates/cadence-ui/src/components/: _components.scss  album.rs  artist.rs  icons.rs  mod.rs  player.rs  playlist.rs  queue.rs  radio.rs  search.rs  track.rs
crates/cadence-ui/src/components/album/: _album.scss  action_bar.rs  card.rs  cover.rs  info.rs  list.rs  modal.rs
crates/cadence-ui/src/components/artist/: _artist.scss  about.rs  card.rs  events.rs  grid.rs  info.rs
crates/cadence-ui/src/components/common/: button.rs  item.rs  modal.rs  scroller.rs
crates/cadence-ui/src/components/icons/: animated_bars.rs  audio_identification.rs  back.rs  dots.rs  library.rs  play.rs  plus.rs  radio.rs  share.rs
crates/cadence-ui/src/components/player/: _player.scss  player.rs  progress.rs  radio_player.rs
crates/cadence-ui/src/components/playlist/: _playlist.scss  card.rs  list.rs
crates/cadence-ui/src/components/queue/: _queue.scss  modal.rs
crates/cadence-ui/src/components/radio/: _radio.scss  card.rs  list.rs
crates/cadence-ui/src/components/search/: _search.scss  input.rs  results.rs
crates/cadence-ui/src/components/track/: _track.scss  info.rs  list.rs  lyrics.rs  modal.rs  row.rs
crates/cadence-ui/src/icons/: animated_bars.rs  back.rs  close.rs  dots.rs  download.rs  icons.scss  mod.rs  next.rs  play.rs  plus.rs  queue.rs  shuffle.rs
crates/cadence-ui/src/items/: items.scss  mod.rs
crates/cadence-ui/src/login/: login.scss  mod.rs
crates/cadence-ui/src/modal/: mod.rs  modal.scss
crates/cadence-ui/src/navbar/: mod.rs  navbar.scss
crates/cadence-ui/src/navigation/: mod.rs
crates/cadence-ui/src/navigation/navbar/: mod.rs  navbar.scss
crates/cadence-ui/src/navigation/topbar/: mod.rs  topbar.scss
crates/cadence-ui/src/player/: mod.rs  player.scss
crates/cadence-ui/src/progress/: mod.rs  progress.scss
crates/cadence-ui/src/queue/: mod.rs  queue.scss
crates/cadence-ui/src/scroller/: mod.rs  scroller.scss
crates/cadence-ui/src/search/: input.rs  input.scss  mod.rs  results.rs  results.scss  search.scss
crates/cadence-ui/src/shared/: _shared.scss  album.rs  artist.rs  common.rs  icons.rs  mod.rs  track.rs
crates/cadence-ui/src/shared/album/: _album.scss  (+4 more)
crates/cadence-ui/src/thumbnails/: mod.rs
crates/cadence-ui/src/track/: list.rs  mod.rs  row.rs  track.scss
crates/cadence-ui/src/views/: _views.scss  album.rs  artist.rs  home.rs  library.rs  mod.rs  now_playing.rs  search.rs  settings.rs  shazam.rs  view.scss
crates/howler-wasm/: Cargo.toml
crates/opensubsonic-cli/: Cargo.toml  build.rs  openapi.json
crates/opensubsonic-cli/src/: codegen.rs  lib.rs
crates/shazam-fingerprint/: Cargo.toml
crates/shazam-fingerprint/src/: algorithm.rs  hanning.rs  lib.rs  signature.rs
(+84 files in other folders)
