[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
# Cadence
cadence-core = { path = "crates/cadence-core" }
cadence-ui = { path = "crates/cadence-ui" }
cadence-storage-android = { path = "crates/cadence-storage-android" }

# Dioxus
dioxus = "0.7.2"
dioxus-sdk = { version = "0.7", features = ["storage", "time"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }

# Android
jni = "0.21.1"
ndk-context = "0.1.1"
redb = "3.1.0"

# web
howler-wasm = { path = "crates/howler-wasm" }
web-sys = { version = "0.3.82", features = ["Window", "AudioContext", "AudioContextState"] }
wasm-bindgen-futures = "0.4.55"

# Clients
opensubsonic-cli = { path = "crates/opensubsonic-cli" }

# Utils
flume = {version = "0.11.1", features = ["async"]}
tracing = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", default-features = false   }
async-trait = "0.1"
once_cell = "1.21.3"
thiserror = "1.0"
url = "2.5.7"
dirs = "6.0.0"
