[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
cadence-player.workspace = true
tokio = { workspace = true, features = ["sync"] }
dioxus = { workspace = true, features = ["router"] }
dioxus-sdk = { workspace = true }
dioxus-primitives.workspace = true

serde = { workspace = true }
opensubsonic-cli.workspace = true
reqwest = { workspace = true }

cadence-storage-android= { workspace = true, optional = true}

# [target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
wasm-bindgen-futures.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile", "cadence-storage-android"]
