[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
cadence-player.workspace = true
cadence-core.workspace = true
cadence-ui.workspace = true
cadence-storage-android= { workspace = true, optional = true}

tokio = { workspace = true, features = ["sync"] }
dioxus = { workspace = true, features = ["router"] }
dioxus-sdk = { workspace = true }
dioxus-primitives.workspace = true

serde = { workspace = true }
opensubsonic-cli.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "cadence-storage-android"]
mobile = ["dioxus/mobile", "cadence-storage-android" ]
