[package]
name = "app"
version = "0.1.0"
edition = "2024"
build = "../../build.rs"

[dependencies]
cadence-core.workspace = true
cadence-ui.workspace = true
cadence-storage-android= { workspace = true, optional = true}
dioxus = { workspace = true }
dioxus-sdk = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web", "cadence-core/web"]
desktop = ["dioxus/desktop", "cadence-storage-android", "cadence-core/desktop"]
mobile = ["dioxus/mobile", "cadence-storage-android", "cadence-core/mobile"]
