[package]
name = "cadence-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
dioxus-sdk.workspace = true
opensubsonic-cli = { workspace = true }
cadence-storage-android = { workspace = true, optional = true }
serde = { workspace = true }
thiserror.workspace = true
url.workspace = true
tracing.workspace = true
once_cell.workspace = true
flume.workspace = true
reqwest.workspace = true
uuid.workspace = true
rand.workspace = true
base64.workspace = true
serde_json.workspace = true
scraper = "0.25.0"

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-context.workspace = true
once_cell.workspace = true
log.workspace = true
shazam-fingerprint.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
howler-wasm.workspace = true
web-time = "1"
wasmtimer = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "rt-multi-thread"] }
rodio = { version = "0.21.1", features = ["wasm-bindgen"] }
stream-download = { version = "0.22.8", features = ["reqwest-rustls"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile", "cadence-storage-android"]
