[package]
name = "cadence-player"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
url.workspace = true
tokio = { version = "1", features = ["rt", "macros", "time"] }
dioxus-sdk.workspace = true
tracing = "0.1"
log = "0.4.28"

# [target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-context.workspace = true
once_cell.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
howler-wasm.workspace = true
web-time = "1"
wasmtimer = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version =  "0.21.1", features = ["wasm-bindgen"] }
stream-download = { version = "0.22.8", features = ["reqwest-rustls"] }
