[package]
name = "opensubsonic-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
progenitor-client = "0.11.2"
reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regress = "0.4.1"
serde_json = "1.0"
once_cell.workspace = true
[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
prettyplease = "0.2.22"
progenitor = "0.11.2"
serde_json = "1.0"
syn = "2.0"
